--- a/first-plugin/ui.html
+++ b/first-plugin/ui.html
@@ -1,17 +1,139 @@
-<h2>Rectangle Creator</h2>
-<p>Count: <input id="count" value="5"></p>
-<button id="create">Create</button>
-<button id="cancel">Cancel</button>
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+  crossorigin="anonymous"
+/>
+
+<style>
+  /* Custom CSS for additional alignment if necessary */
+  .card {
+    max-width: 500px; /* Set a max width for the form card */
+    margin: 0 auto; /* Center the card in the page */
+  }
+  /* Align radio buttons horizontally */
+  .radio-group {
+    display: flex;
+    gap: 20px;
+  }
+</style>
+
+<div class="container my-5">
+  <h1 class="text-center mb-4">Petma plugin</h1>
+
+  <!-- The icon-button--selected class is not part of Bootstrap. You would need to define this or replace it with a Bootstrap equivalent if available. -->
+  <div class="icon-button icon-button--selected">
+    <div class="icon icon--blend"></div>
+  </div>
+
+  <form>
+    <div class="p-4">
+      <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input
+          type="text"
+          class="form-control"
+          id="username"
+          placeholder="Enter your Petma username"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          placeholder="Enter your Petma display name"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
+          class="form-control"
+          id="description"
+          rows="3"
+          placeholder="Your post goes here"
+        ></textarea>
+      </div>
+
+      <div class="form-check form-switch mb-3">
+        <input class="form-check-input" type="checkbox" id="dark-mode-on" />
+        <label class="form-check-label" for="dark-mode-on">Dark Mode</label>
+      </div>
+
+      <div class="mb-3">
+        <label class="col-form-label pt-0">Image Options</label>
+        <div class="radio-group">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="variantGroup"
+              id="radioButton1"
+              value="no_image"
+              checked
+            />
+            <label class="form-check-label" for="radioButton1">No Image</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="variantGroup"
+              id="radioButton2"
+              value="single_image"
+            />
+            <label class="form-check-label" for="radioButton2"
+              >Single Image</label
+            >
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="variantGroup"
+              id="radioButton3"
+              value="carousel"
+            />
+            <label class="form-check-label" for="radioButton3">Carousel</label>
+          </div>
+        </div>
+      </div>
+
+      <button id="submit-post" type="submit" class="btn btn-primary">
+        Submit
+      </button>
+    </div>
+  </form>
+</div>
+
 <script>
+  document
+    .getElementById("submit-post")
+    .addEventListener("click", function (event) {
+      event.preventDefault(); // Prevent the default form submission
 
-document.getElementById('create').onclick = () => {
-  const textbox = document.getElementById('count');
-  const count = parseInt(textbox.value, 10);
-  parent.postMessage({ pluginMessage: { type: 'create-rectangles', count } }, '*')
-}
+      const name = document.getElementById("name").value;
+      const username = document.getElementById("username").value;
+      const description = document.getElementById("description").value;
+      const darkModeState = document.getElementById("dark-mode-on").checked;
+      const imageVariant = document.querySelector(
+        'input[name="variantGroup"]:checked',
+      ).value; // Corrected selector
 
-document.getElementById('cancel').onclick = () => {
-  parent.postMessage({ pluginMessage: { type: 'cancel' } }, '*')
-}
-
+      parent.postMessage(
+        {
+          pluginMessage: {
+            name,
+            username,
+            description,
+            darkModeState,
+            imageVariant,
+          },
+        },
+        "*",
+      );
+    });
 </script>
